[package]
name = "pop-ci"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["unstable"] }
clap = { version = "2.33.3", default-features = false }
futures = "0.3.16"
json = "0.12.4"
